# cargo-bloat-example

./: 0.9.0.txt  Cargo.toml
.github/workflows/: bloat.yml
src/: main.rs
