[package]
name = "rust-zmq"
version = "0.1.0"
authors = ["Jakub Beránek <berykubik@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam = "0.7"
#futures-zmq = "0.5"
#tokio-zmq = "= 0.9.0"
#tokio-zmq = "= 0.10.0"
#tokio-zmq = "= 0.10.1"
tokio-zmq = { version = "0.10.2", git = "https://git.asonix.dog/asonix/async-zmq.git", branch = "development" }
futures = "0.1"
tokio = "0.1"
zmq = "0.9"
env_logger = "0.6"

[[bin]]
name = "example-1"
path = "src/bin/example1.rs"

[[bin]]
name = "example2"
path = "src/bin/example2.rs"
